--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,64 +1,50 @@
 name: Build APK with Buildozer
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    - name: Checkout Repository
+      uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
 
-      - name: Install Dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y git zip unzip openjdk-17-jdk autoconf build-essential libtool
-          pip install --upgrade pip setuptools wheel
-          pip install cython virtualenv
+    - name: Install Dependencies
+      run: |
+        sudo apt update
+        sudo apt install -y python3-pip libffi-dev libssl-dev
+        pip install --upgrade pip
+        pip install --upgrade buildozer cython virtualenv
 
-      - name: Install Buildozer
-        run: |
-          pip install --user buildozer
+    - name: Setup Android SDK
+      run: |
+        mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
+        cd ~/.buildozer/android/platform/android-sdk/cmdline-tools
+        wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+        unzip cmdline-tools.zip
+        mv cmdline-tools latest
 
-      - name: Install Android SDK
-        run: |
-          mkdir -p ~/.buildozer/android/platform/android-sdk/cmdline-tools
-          cd ~/.buildozer/android/platform/android-sdk/cmdline-tools
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip
-          mv cmdline-tools latest
-          export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
-          export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
-          yes | sdkmanager --sdk_root=$ANDROID_HOME --licenses
-          sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
+        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/34.0.0:$PATH
+        
+        yes | sdkmanager --licenses
+        sdkmanager --install "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+
+    - name: Build APK
+      run: |
+        export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
+        export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$ANDROID_HOME/build-tools/34.0.0:$PATH
+        buildozer -v android debug
 
 
-
-      - name: Initialize Buildozer
-        run: |
-          export PATH=$HOME/.local/bin:$PATH
-          if [ ! -f buildozer.spec ]; then buildozer init; fi
-
-      - name: Build APK
-        run: |
-          export PATH=$HOME/.local/bin:$PATH
-          export ANDROID_HOME=$HOME/.buildozer/android/platform/android-sdk
-          buildozer -v android debug
-
-      - name: Upload APK as Artifact
-        uses: actions/upload-artifact@v4
-        with:
+    - name: Upload APK as Artifact
+      uses: actions/upload-artifact@v4
+      with:
           name: MyApp-APK
           path: bin/*.apk
